--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -58,7 +58,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)GameEngine\vendor\ImguiSfml;$(SolutionDir)GameEngine\vendor\SFML-2.5.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)GameEngine\vendor;$(SolutionDir)GameEngine\vendor\ImguiSfml;$(SolutionDir)GameEngine\vendor\SFML-2.5.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -76,7 +76,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)GameEngine\vendor\ImguiSfml;$(SolutionDir)GameEngine\vendor\SFML-2.5.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)GameEngine\vendor;$(SolutionDir)GameEngine\vendor\ImguiSfml;$(SolutionDir)GameEngine\vendor\SFML-2.5.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -89,6 +89,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\data_export_manager.cpp" />
+    <ClCompile Include="src\sprite_wrapper.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\application.cpp">
@@ -147,6 +149,8 @@
     <ClCompile Include="vendor\ImguiSfml\misc\cpp\imgui_stdlib.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\data_export_manager.h" />
+    <ClInclude Include="src\sprite_wrapper.h" />
     <ClInclude Include="src\renderer.h" />
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\application.h" />
