--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClCompile Include="src\resource_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\event_handler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\animator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\map.h">
@@ -50,5 +59,94 @@
     <ClInclude Include="src\resource_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\event_handler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\animator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\MapTiles\tile1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MapTiles\tile2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MapTiles\tile3.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MapTiles\tile4.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MapTiles\tile5.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MapTiles\tile6.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MapTiles\tile7.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MapTiles\tile8.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MapTiles\tile9.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MapTiles\tile10.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Idle\woodcutter_idle1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Idle\woodcutter_idle2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Idle\woodcutter_idle3.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Idle\woodcutter_idle4.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Run\woodcutter_run1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Run\woodcutter_run2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Run\woodcutter_run3.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Run\woodcutter_run4.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Run\woodcutter_run5.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Run\woodcutter_run6.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Walk\woodcutter_walk1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Walk\woodcutter_walk2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Walk\woodcutter_walk3.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Walk\woodcutter_walk4.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Walk\woodcutter_walk5.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Woodcutter\Walk\woodcutter_walk6.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
